force-app/main/default/objects/Account/fields/AV_OficinaPrincipalRelacionas__c.field-meta.xml
<CustomField>
    <fullName>AV_OficinaPrincipalRelacionas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oficina Principal y Relacionadas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>