force-app/main/default/objects/Account/fields/AV_PorAtencionGlobal__c.field-meta.xml
<CustomField>
    <fullName>AV_PorAtencionGlobal__c</fullName>
    <label>Porcentaje de atención global</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>