force-app/main/default/objects/Account/fields/AV_PorCumplimiento__c.field-meta.xml
<CustomField>
    <fullName>AV_PorCumplimiento__c</fullName>
    <label>Porcentaje de cumplimiento del modelo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>