force-app/main/default/objects/Account/fields/AV_PotencialityClientValue__c.field-meta.xml
<CustomField>
    <fullName>AV_PotencialityClientValue__c</fullName>
    <label>Potencialidad Cliente Valor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>