force-app/main/default/objects/Account/fields/AV_Preconcedidos__c.field-meta.xml
<CustomField>
    <fullName>AV_Preconcedidos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preconcedidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>