force-app/main/default/objects/Account/fields/AV_Preconceived__c.field-meta.xml
<CustomField>
    <fullName>AV_Preconceived__c</fullName>
    <label>Límite Preconcedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>