force-app/main/default/objects/Account/fields/AV_PreconceivedText__c.field-meta.xml
<CustomField>
    <fullName>AV_PreconceivedText__c</fullName>
    <description>Campo formula que saca un string más el campo AV_Preconceived__c</description>
    <formula>&quot;Preconcedido: &quot; &amp; TEXT(AV_Preconceived__c)  &amp; &quot; € &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Límite Preconcedido Text</label>
    <type>Text</type>
</CustomField>