force-app/main/default/objects/Account/fields/AV_Priority__c.field-meta.xml
<CustomField>
    <fullName>AV_Priority__c</fullName>
    <label>Score(Antiguo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>