force-app/main/default/objects/Account/fields/AV_Qualification__c.field-meta.xml
<CustomField>
    <fullName>AV_Qualification__c</fullName>
    <description>Descripción de la calificación.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Calificación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>