force-app/main/default/objects/Account/fields/AV_Rating__c.field-meta.xml
<CustomField>
    <fullName>AV_Rating__c</fullName>
    <description>Valor numérico del rating (personas físicas).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>