force-app/main/default/objects/Account/fields/AV_RealContactNumber__c.field-meta.xml
<CustomField>
    <fullName>AV_RealContactNumber__c</fullName>
    <description>Número de contactos reales.</description>
    <label>Número de contactos reales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>