force-app/main/default/objects/Account/fields/AV_Rentabilidad__c.field-meta.xml
<CustomField>
    <fullName>AV_Rentabilidad__c</fullName>
    <description>Importe de rentabilidad del cliente</description>
    <label>Rentabilidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>