force-app/main/default/objects/Account/fields/AV_Satisfaccion__c.field-meta.xml
<CustomField>
    <fullName>AV_Satisfaccion__c</fullName>
    <description>Indicador de satisfacción del cliente: 
1-Negativo, 
2-Neutro, 
3-Positivo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Satisfacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>