force-app/main/default/objects/Account/fields/AV_Scoring__c.field-meta.xml
<CustomField>
    <fullName>AV_Scoring__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scoring (Antíguo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>