force-app/main/default/objects/Account/fields/AV_ScoringStatus__c.field-meta.xml
<CustomField>
    <fullName>AV_ScoringStatus__c</fullName>
    <description>Estado del scoring.</description>
    <label>Estado del scoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>J</fullName>
                <isActive>false</isActive>
                <label>J</label>
            </value>
            <value>
                <fullName>M</fullName>
                <isActive>false</isActive>
                <label>M</label>
            </value>
            <value>
                <fullName>R</fullName>
                <isActive>false</isActive>
                <label>R</label>
            </value>
            <value>
                <fullName>S</fullName>
                <isActive>false</isActive>
                <label>S</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>