force-app/main/default/objects/Account/fields/AV_Segmento__c.field-meta.xml
<CustomField>
    <fullName>AV_Segmento__c</fullName>
    <description>Segmento en el que se encuentra el cliente</description>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPR</fullName>
                <label>Banca Privada</label>
            </value>
            <value>
                <fullName>BPE</fullName>
                <label>Banca Personal</label>
            </value>
            <value>
                <fullName>RPF</fullName>
                <label>Resto personas fisicas</label>
            </value>
            <value>
                <fullName>BPJ</fullName>
                <label>BPR Juridicas</label>
            </value>
            <value>
                <fullName>SPU</fullName>
                <label>Sector publico</label>
            </value>
            <value>
                <fullName>FIL</fullName>
                <label>Filiales</label>
            </value>
            <value>
                <fullName>EFI</fullName>
                <label>Entidades financieras</label>
            </value>
            <value>
                <fullName>PRO</fullName>
                <label>Promotor</label>
            </value>
            <value>
                <fullName>GEM</fullName>
                <label>Grandes empresas</label>
            </value>
            <value>
                <fullName>PIM</fullName>
                <label>PIMES</label>
            </value>
            <value>
                <fullName>MIC</fullName>
                <label>Microempresas</label>
            </value>
            <value>
                <fullName>REM</fullName>
                <label>Resto de empresas</label>
            </value>
            <value>
                <fullName>RJU</fullName>
                <label>Resto de juridicas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>