force-app/main/default/objects/Account/fields/AV_Seguros__c.field-meta.xml
<CustomField>
    <fullName>AV_Seguros__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seguros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>