force-app/main/default/objects/Account/fields/AV_SubmodeloAtencion__c.field-meta.xml
<CustomField>
    <fullName>AV_SubmodeloAtencion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submodelo de atención</label>
    <length>255</length>
    <type>Text</type>
</CustomField>