force-app/main/default/objects/Account/fields/AV_Subsegmento__c.field-meta.xml
<CustomField>
    <fullName>AV_Subsegmento__c</fullName>
    <description>Subsegmente de personas físicas y jurídicas</description>
    <label>Subsegmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPC</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
            <value>
                <fullName>EFA</fullName>
            </value>
            <value>
                <fullName>BPE</fullName>
            </value>
            <value>
                <fullName>BSA</fullName>
            </value>
            <value>
                <fullName>BEP</fullName>
            </value>
            <value>
                <fullName>BRJ</fullName>
            </value>
            <value>
                <fullName>PMI</fullName>
            </value>
            <value>
                <fullName>REP</fullName>
            </value>
            <value>
                <fullName>EFE</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>GGE</fullName>
            </value>
            <value>
                <fullName>PIE</fullName>
            </value>
            <value>
                <fullName>EFI</fullName>
            </value>
            <value>
                <fullName>FIL</fullName>
            </value>
            <value>
                <fullName>RJJ</fullName>
            </value>
            <value>
                <fullName>MIE</fullName>
            </value>
            <value>
                <fullName>GMG</fullName>
            </value>
            <value>
                <fullName>RJP</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>RES</fullName>
            </value>
            <value>
                <fullName>PIP</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
            <value>
                <fullName>RJB</fullName>
            </value>
            <value>
                <fullName>PMG</fullName>
            </value>
            <value>
                <fullName>PGP</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>PIG</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>