force-app/main/default/objects/Account/fields/AV_TargetAuto__c.field-meta.xml
<CustomField>
    <fullName>AV_TargetAuto__c</fullName>
    <description>Campo que CLI informará para saber si el cliente tiene Target</description>
    <label>Target Auto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Sí</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>