force-app/main/default/objects/Account/fields/AV_TipoCentroSuperior__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoCentroSuperior__c</fullName>
    <description>Tipo del centro superior</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo centro superior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>