force-app/main/default/objects/Account/fields/AV_TipoEstructura__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoEstructura__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Estructura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>