force-app/main/default/objects/Account/fields/CBK_External__c.field-meta.xml
<CustomField>
    <fullName>CBK_External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CBK_External</label>
    <length>30</length>
    <type>Text</type>
</CustomField>