force-app/main/default/objects/Account/fields/CBK_OrigenCompartido__c.field-meta.xml
<CustomField>
    <fullName>CBK_OrigenCompartido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origen Compartido</label>
    <type>Checkbox</type>
</CustomField>