force-app/main/default/objects/Account/fields/CC_Centro_Gestor_InTouch__c.field-meta.xml
<CustomField>
    <fullName>CC_Centro_Gestor_InTouch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro Gestor InTouch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Centro Gestor InTouch)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>