force-app/main/default/objects/Account/fields/CC_CodAutonomia__c.field-meta.xml
<CustomField>
    <fullName>CC_CodAutonomia__c</fullName>
    <description>Código de la comunidad autónoma.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Autonomía</label>
    <length>3</length>
    <type>Text</type>
</CustomField>