force-app/main/default/objects/Account/fields/CC_Confidencial__c.field-meta.xml
<CustomField>
    <fullName>CC_Confidencial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente confidencial</label>
    <type>Checkbox</type>
</CustomField>