force-app/main/default/objects/Account/fields/CC_Delegacion_General__c.field-meta.xml
<CustomField>
    <fullName>CC_Delegacion_General__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up directo a la DG de la cuenta.</description>
    <label>Delegación general</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Dirección general)</relationshipLabel>
    <relationshipName>CC_Direccion_General</relationshipName>
    <type>Lookup</type>
</CustomField>