force-app/main/default/objects/Account/fields/CC_Derivacion_CSBD__c.field-meta.xml
<CustomField>
    <fullName>CC_Derivacion_CSBD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para derivar a CSBD</description>
    <label>Derivación CSBD</label>
    <type>Checkbox</type>
</CustomField>