force-app/main/default/objects/Account/fields/CC_Direccion_Territorial__c.field-meta.xml
<CustomField>
    <fullName>CC_Direccion_Territorial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up directo a la DT de la cuenta.</description>
    <label>Dirección territorial</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Delegación territorial)</relationshipLabel>
    <relationshipName>CC_Delegacion_Territorial</relationshipName>
    <type>Lookup</type>
</CustomField>