force-app/main/default/objects/Account/fields/CC_Empleado_Familiar__c.field-meta.xml
<CustomField>
    <fullName>CC_Empleado_Familiar__c</fullName>
    <formula>IF(OR(CC_Empleados_Familiares__c, AV_Empleado__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Empleado o Familiar</label>
    <type>Checkbox</type>
</CustomField>