force-app/main/default/objects/Account/fields/CC_Empleados_Familiares__c.field-meta.xml
<CustomField>
    <fullName>CC_Empleados_Familiares__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para marcar empleados y familiares</description>
    <label>Familiar de empleado</label>
    <type>Checkbox</type>
</CustomField>