force-app/main/default/objects/Account/fields/CC_EsIntouch__c.field-meta.xml
<CustomField>
    <fullName>CC_EsIntouch__c</fullName>
    <description>Campo para ver si es intouch</description>
    <formula>INCLUDES(AV_IndicadoresClientes__c ,&apos;8&apos;) || INCLUDES(AV_IndicadoresClientes__c , &apos;18&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Intouch</label>
    <type>Checkbox</type>
</CustomField>