force-app/main/default/objects/Account/fields/CC_Fecha_Integracion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Integracion__c</fullName>
    <description>Fecha en la que una oficina queda integrada en otra oficina.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Integración</label>
    <type>Date</type>
</CustomField>