force-app/main/default/objects/Account/fields/CC_FechaRefresco__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaRefresco__c</fullName>
    <description>Fecha de refresco de los datos del cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha de refresco de los datos del cliente</inlineHelpText>
    <label>Fecha refresco</label>
    <type>Date</type>
</CustomField>