force-app/main/default/objects/Account/fields/CC_Gerencia_Comercial__c.field-meta.xml
<CustomField>
    <fullName>CC_Gerencia_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerencia Comercial</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Gerencia Comercial)</relationshipLabel>
    <relationshipName>CC_Gerencia_Comercial</relationshipName>
    <type>Lookup</type>
</CustomField>