force-app/main/default/objects/Account/fields/CC_Gestor_InTouch__c.field-meta.xml
<CustomField>
    <fullName>CC_Gestor_InTouch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gestor InTouch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>