force-app/main/default/objects/Account/fields/CC_Grupo_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>CC_Grupo_Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo colaborador</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>