force-app/main/default/objects/Account/fields/CC_GrupoCentro__c.field-meta.xml
<CustomField>
    <fullName>CC_GrupoCentro__c</fullName>
    <description>US1110917 - Marca de gestores de centros Wealth</description>
    <formula>IF(
    CC_Tipo_Oficina__c = &quot;W&quot;,
    IMAGE(&quot;/resource/CC_Wealth&quot;, &quot;Centro Wealth&quot;, 80, 76),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo Centro</label>
    <type>Text</type>
</CustomField>