force-app/main/default/objects/Account/fields/CC_Horario_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Horario_Oficina__c</fullName>
    <description>Horario de la oficina</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Horario Oficina</label>
    <length>2</length>
    <type>Text</type>
</CustomField>