force-app/main/default/objects/Account/fields/CC_Identificador__c.field-meta.xml
<CustomField>
    <fullName>CC_Identificador__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;CC_CentroCaixaBank&apos;, CC_Numero_Oficina_Empresa__c, CC_Numero_Documento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificador</label>
    <type>Text</type>
</CustomField>