force-app/main/default/objects/Account/fields/CC_Marca_senior__c.field-meta.xml
<CustomField>
    <fullName>CC_Marca_senior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marca senior</label>
    <type>Checkbox</type>
</CustomField>