force-app/main/default/objects/Account/fields/CC_MarcaGrupo__c.field-meta.xml
<CustomField>
    <fullName>CC_MarcaGrupo__c</fullName>
    <description>Campo utilizado para enseñar imágenes referidas a la configuración de la cuenta</description>
    <formula>IF(	AND(OR(RecordType.DeveloperName = &apos;CC_ClientePA&apos;, RecordType.DeveloperName = &apos;CC_Cliente&apos;),	 AND(NOT(ISBLANK(AV_EAPGestor__c)), AV_EAPGestor__r.CC_Matricula__c != &apos;000000&apos;)),	IF(	 CC_MarcaSenior__c &amp;&amp; CC_Empleado_Familiar__c,	 IF(	     ISPICKVAL(AV_Segmento__c, &apos;BPR&apos;),	     IMAGE(&quot;/resource/CC_SeniorEmpleadoBancaPrivada&quot;, &apos;S, E y BP&apos;, 100, 240),	     IF(	         INCLUDES(AV_IndicadoresClientes__c, &apos;28&apos;),	         IMAGE(&quot;/resource/CC_SeniorEmpleadoImagin&quot;, &apos;S, E e I&apos;, 100, 240),	         IF(	             CC_EsIntouch__c,	             IMAGE(&quot;/resource/CC_SeniorEmpleadoTouch&quot;, &apos;S, E y T&apos;, 100, 240),	             IF(	                 AV_EAPGestor__r.AV_Pool__c,	                 IMAGE(&quot;/resource/CC_ClienteSenior_EmpleadosFamiliares_Pool&quot;, &apos;T&apos;, 100, 240),	                 IMAGE(&quot;/resource/CC_SeniorEmpleadoConGestor&quot;, &apos;S, E y CsG&apos;, 100, 240)	             )	         )	     )	 ),	 IF(	     CC_Empleado_Familiar__c,	     IF(	         ISPICKVAL(AV_Segmento__c, &apos;BPR&apos;),	         IMAGE(&quot;/resource/CC_EmpleadoPrivada&quot;, &apos;E y F y BP&apos;, 100, 160),	         IF(	             INCLUDES(AV_IndicadoresClientes__c, &apos;28&apos;),	             IMAGE(&quot;/resource/CC_EmpleadoImagin&quot;, &apos;E, F e I&apos;, 100, 160),	             IF(	                 CC_EsIntouch__c,	                 IMAGE(&quot;/resource/CC_EmpleadoTouch&quot;, &apos;E, F e T&apos;, 100, 160),	                 IF(	                     AV_EAPGestor__r.AV_Pool__c,	                     IMAGE(&quot;/resource/CC_EmpleadosFamiliares_Pool&quot;, &apos;T&apos;, 100, 160),	                     IMAGE(&quot;/resource/CC_EmpleadoConGestor&quot;, &apos;E, F y CsG&apos;, 100, 160)	                 )	             )	         )	     ),	     IF(	         CC_MarcaSenior__c,	         IF(	             ISPICKVAL(AV_Segmento__c, &apos;BPR&apos;),	             IMAGE(&quot;/resource/CC_SeniorPrivada&quot;, &apos;S y BP&apos;, 100, 160),	             IF(	                 INCLUDES(AV_IndicadoresClientes__c, &apos;28&apos;),	                 IMAGE(&quot;/resource/CC_SeniorImagin&quot;, &apos;S e I&apos;, 100, 160),	                 IF(	                     CC_EsIntouch__c,	                     IMAGE(&quot;/resource/CC_SeniorTouch&quot;, &apos;S y T&apos;, 100, 160),	                     IF(	                         AV_EAPGestor__r.AV_Pool__c,	                         IMAGE(&quot;/resource/CC_ClienteSenior_Pool&quot;, &apos;T&apos;, 100, 160),	                         IMAGE(&quot;/resource/CC_SeniorConGestor&quot;, &apos;S y CsG&apos;, 100, 160)	                     )	                 )	             )	         ),	         IF(	             ISPICKVAL(AV_Segmento__c, &apos;BPR&apos;),	             IMAGE(&quot;/resource/CC_BancaPrivada&quot;, &apos;BP&apos;, 80, 80),	             IF(	                 AV_EAPGestor__r.AV_Pool__c,	                 IF(	                     INCLUDES(AV_IndicadoresClientes__c, &apos;28&apos;),	                     IMAGE(&quot;/resource/CC_PoolImagin&quot;, &apos;BP&apos;, 80, 180),	                     IF(	                         CC_EsIntouch__c,	                         IMAGE(&quot;/resource/CC_PoolConecta&quot;, &apos;BP&apos;, 80, 180),	                         IMAGE(&quot;/resource/CC_Centro_Pool&quot;, &apos;T&apos;, 80, 90)	                     )	                 ),	                 IF(	                     INCLUDES(AV_IndicadoresClientes__c, &apos;28&apos;),	                     IMAGE(&quot;/resource/CC_ClienteImagin&quot;, &apos;I&apos;, 80, 80),	                     IF(	                         CC_EsIntouch__c,	                         IMAGE(&quot;/resource/CC_ClienteInTouch&quot;, &apos;T&apos;, 80, 80),	                         IMAGE(&quot;/resource/CC_ClienteConGestor&quot;, &apos;CsG&apos;, 80, 80)	                     )	                 )	             )	          )	     )	 )	),	&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo</label>
    <type>Text</type>
</CustomField>