force-app/main/default/objects/Account/fields/CC_MarcaSenior__c.field-meta.xml
<CustomField>
    <fullName>CC_MarcaSenior__c</fullName>
    <description>Recuperamos si el cliente es Senior</description>
    <formula>INCLUDES(AV_IndicadoresClientes__c, &apos;23&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca Senior</label>
    <type>Checkbox</type>
</CustomField>