force-app/main/default/objects/Account/fields/CC_MenorEmancipado__c.field-meta.xml
<CustomField>
    <fullName>CC_MenorEmancipado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador si la persona es menor de edad y está emancipada</description>
    <inlineHelpText>Indicador si la persona es menor de edad y está emancipada</inlineHelpText>
    <label>Menor emancipado</label>
    <type>Checkbox</type>
</CustomField>