force-app/main/default/objects/Account/fields/CC_Mostrar_Advertencia_Compartir__c.field-meta.xml
<CustomField>
    <fullName>CC_Mostrar_Advertencia_Compartir__c</fullName>
    <formula>IF(AND(CC_Tipo_Centro__c != &apos;OF&apos;, CC_Tipo_Centro__c != &apos;GC&apos;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mostrar advertencia compartir (interno)</label>
    <type>Checkbox</type>
</CustomField>