force-app/main/default/objects/Account/fields/CC_Name_ComAutonoma__c.field-meta.xml
<CustomField>
    <fullName>CC_Name_ComAutonoma__c</fullName>
    <description>Nombre de la Comunidad Autónoma</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comunidad Autónoma</label>
    <length>30</length>
    <type>Text</type>
</CustomField>