force-app/main/default/objects/Account/fields/CC_Nivjerar__c.field-meta.xml
<CustomField>
    <fullName>CC_Nivjerar__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nivjerar</label>
    <length>2</length>
    <type>Text</type>
</CustomField>