force-app/main/default/objects/Account/fields/CC_NumCentroSup_1Niv__c.field-meta.xml
<CustomField>
    <fullName>CC_NumCentroSup_1Niv__c</fullName>
    <formula>Parent.CC_Numero_Oficina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centro Superior 1r Nivel</label>
    <type>Text</type>
</CustomField>