force-app/main/default/objects/Account/fields/CC_Numero_Documento__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Documento__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Número de documento</label>
    <length>14</length>
    <type>Text</type>
</CustomField>