force-app/main/default/objects/Account/fields/CC_Numero_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Empresa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Empresa</label>
    <length>3</length>
    <type>Text</type>
</CustomField>