force-app/main/default/objects/Account/fields/CC_Numero_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Oficina__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número de centro</label>
    <length>5</length>
    <type>Text</type>
</CustomField>