force-app/main/default/objects/Account/fields/CC_Numero_Oficina_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Oficina_Empresa__c</fullName>
    <description>Número de oficina y empresa</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Número de oficina y empresa</inlineHelpText>
    <label>Número oficina-empresa</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>