force-app/main/default/objects/Account/fields/CC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso__c</fullName>
    <description>NumPerso de la cuenta</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>NumPerso de la cuenta</inlineHelpText>
    <label>NumPerso</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>