force-app/main/default/objects/Account/fields/CC_Numperso_HEX__c.field-meta.xml
<CustomField>
    <fullName>CC_Numperso_HEX__c</fullName>
    <description>Campos numperso en formato hexadecimal para reversion de imaginBank</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Numperso HEX</label>
    <length>25</length>
    <type>Text</type>
</CustomField>