force-app/main/default/objects/Account/fields/CC_NumPersoOrig__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPersoOrig__c</fullName>
    <description>Identificador NumPerso original (master) para fusionar los contactos / clientes</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Identificador NumPerso original (master) para fusionar los contactos / clientes</inlineHelpText>
    <label>NUMPERSO Original</label>
    <length>15</length>
    <type>Text</type>
</CustomField>