force-app/main/default/objects/Account/fields/CC_OficinaGestoraId__c.field-meta.xml
<CustomField>
    <fullName>CC_OficinaGestoraId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina gestora del cliente</description>
    <inlineHelpText>Oficina gestora del cliente</inlineHelpText>
    <label>Oficina gestora</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oficinas gestoras</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>