force-app/main/default/objects/Account/fields/CC_Segmento__c.field-meta.xml
<CustomField>
    <fullName>CC_Segmento__c</fullName>
    <description>.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Segmento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>