force-app/main/default/objects/Account/fields/CC_Segmento_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CC_Segmento_Descripcion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segmento descripción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>