force-app/main/default/objects/Account/fields/CC_Senal_Comercial_Imaginbank__c.field-meta.xml
<CustomField>
    <fullName>CC_Senal_Comercial_Imaginbank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Señal comercial Imaginbank</label>
    <type>Checkbox</type>
</CustomField>