force-app/main/default/objects/Account/fields/CC_StatusRef_ALF__c.field-meta.xml
<CustomField>
    <fullName>CC_StatusRef_ALF__c</fullName>
    <formula>IF(ISBLANK(CC_NumPerso__c),&apos;N/A&apos;,
IF(ISBLANK(CC_FechaRefresco__c), IMAGE(&quot;/resource/CC_Rojo&quot;,&apos;Bad&apos;,15,15) + &apos; Sin datos de ALF&apos;, 
IF ( (CC_FechaRefresco__c + FLOOR($CustomMetadata.CC_InterfaceSettings__mdt.CC_Int_ALF.CC_DiasRef__c)) &gt; TODAY(), IMAGE(&quot;/resource/CC_Verde&quot;,&apos;Good&apos;,15,15) + &apos; Actualizado&apos;, IMAGE(&quot;/resource/CC_Rojo&quot;,&apos;Bad&apos;,15,15) + &apos; Pendiente actualizar datos&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado datos</label>
    <type>Text</type>
</CustomField>