force-app/main/default/objects/Account/fields/CC_Subsegmento_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CC_Subsegmento_Descripcion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subsegmento descripción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>