force-app/main/default/objects/Account/fields/CC_SubTipo_Centro__c.field-meta.xml
<CustomField>
    <fullName>CC_SubTipo_Centro__c</fullName>
    <description>Subtipo de Centro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subtipo de Centro</label>
    <length>3</length>
    <type>Text</type>
</CustomField>