force-app/main/default/objects/Account/fields/CC_Telefono_Unico__c.field-meta.xml
<CustomField>
    <fullName>CC_Telefono_Unico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teléfono único</label>
    <type>Checkbox</type>
</CustomField>